# saintcon-appsec-challenge-2025

./: .gitignore  README.md  create_submission.py
DerbyRace/: Dockerfile  allowed_files.txt  build.sh  derby.c  docker-compose.yml  runtests.sh
DerbyRace/frontend/: package-lock.json
DerbyRace/tests/: test_derby.py  test_derby_vuln.py
diceroller/: Dockerfile  allowed_files.txt  build.sh  diceroller.php  docker-compose.yml
diceroller/tests/: test_diceroller.py  test_diceroller_vuln.py
encryptle/cbc/: Dockerfile  allowed_files.txt  build.sh  cbc.html  docker-compose.yml  encryptle_cbc.py  runtests.sh
encryptle/ecb/: 6.txt  Dockerfile  allowed_files.txt  build.sh  docker-compose.yml  ecb.html  encryptle_ecb.py
encryptle/gcm/: Dockerfile  allowed_files.txt  build.sh  (+5 more)
fortune-teller/: Dockerfile  app.py  build.sh  docker-compose.yml  fortunes.json  requirements.txt
iTrivia/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  allowed_files.txt  build.bat  build.sh  docker-compose.yml  runtests.bat  server.lisp
iTrivia/itrivia-app/: .dockerignore  Cargo.toml  Dioxus.toml
iTrivia/itrivia-app/assets/: saintcarnsolas.eot
iTrivia/itrivia-app/assets/styling/: main.scss
iTrivia/itrivia-app/src/: main.rs
liebike/: Dockerfile  allowed_files.txt  docker-compose.yml  go.mod  handlers.go  main.go
oracle/: .gitignore  Dockerfile  allowed_files.txt  build.sbt  build.sh  docker-compose.yml
sp1nwh33l/: Dockerfile  Program.cs  allowed_files.txt  appsettings.json  build.bat  build.sh  docker-compose.yml  runtests.bat  runtests.sh
tests/: Dockerfile  cleanup.py
(+35 files in other folders)
