[package]
name = "itrivia-app"
version = "0.1.0"
authors = ["cabbage"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
reqwest = "0.12.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
web-sys = { version = "0.3.81", features = ["Event", "EventTarget", "HtmlInputElement"] }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
